Fix font loading under Internet Explorers (and maybe also Edge)
IE10 and newer don't support conditional comments anymore, hence why the
previous approach was flawed.

Bug: T134653
Change-Id: Ic60cbe59a5f13dc31b8f5b24d5e1c449d15979b8

--- a/refreshed/iefontfix.css
+++ b/refreshed/iefontfix.css
@@ -1,3 +1,4 @@
+/* Font loader file for _all_ browsers, despite the legacy name. See SkinRefreshed::initPage() for details. */
 @font-face {
 	font-family: 'Lato';
 	font-style: normal;
