Switch dropdown animation from fade to collapse
Implementing suggestion from https://phabricator.wikimedia.org/T136527. Switching from a fade to a collapse animation for all dropdowns in the header (save the search dropdown on the medium version of the skin) and the "more..."/"tools" dropdown beneath the article title.

Change-Id: I73eb758d903532c2fd29523212c20fe7bc8ad9ae

--- a/refreshed/main.css
+++ b/refreshed/main.css
@@ -1,3 +1,20 @@
+.collapsible {
+	-ms-transition: max-height 0.4s ease;
+	transition: max-height 0.4s ease;
+	/*max-height: 50vh; /* capping the sidebar height at half the height of the window */
+	visibility: visible;
+	overflow: hidden;
+	height: auto;
+}
+
+.collapsed {
+	-ms-transition: max-height 0.2s ease, visibility 0.2s;
+	transition: max-height 0.2s ease, visibility 0.2s;
+	max-height: 0 !important;
+	visibility: hidden;
+	overflow: hidden;
+}
+
 .fadable {
 	-ms-transition: opacity 0.2s ease;
 	transition: opacity 0.2s ease;
