Allowing on-site override of default logged-in/anon icons, cleanup
This commit allows the default logged-in/anon icons to be overriden through two system messages (refreshed-icon-logged-in and refreshed-icon-logged-out). If the appropriate message for the current situation is not empty (and SocialProfile is not installed), the message's contents are placed in the src of the avatar img element, overriding the default WikiFont logged-in/anon icons. The avatar logic has also been cleaned up to reduce redundancy. Finally, the avatar img element no longer has a hard-coded width attribute as this is already handled with CSS (which allows for more on-site customization).

Bug: T163961
Change-Id: I7851c5f63282b951c6b0b5baa59f84f8fa088d48

--- a/refreshed/main.css
+++ b/refreshed/main.css
@@ -119,17 +119,20 @@ a.header-button { /* double selectors to override default a element text-decorat
 
 .avatar {
 	width: 30px;
-	padding-left: 0.25em;
-	padding-right: 0.25em;
 }
 
-.avatar-no-socialprofile.wikiglyph-user-sleep,
-.avatar-no-socialprofile.wikiglyph-user-smile,
-.wikiglyph-magnifying-glass {
+.avatar-image {
+	padding-left: 0.25em;
+	padding-right: 0.25em; /* this class is added to image avatars because they should have padding but the default WikiFont ones shouldn't */
+}
+
+.header-button .wikiglyph-user-sleep,
+.header-button .wikiglyph-user-smile,
+.header-button .wikiglyph-magnifying-glass {
 	display: inline-block;
 	vertical-align: middle;
 	font-size: 2em;
-	line-height: 1em; /* That is, the line-height is the font size. The line-height and the vertical-align together vertically center the icon. c*/
+	line-height: 1em; /* That is, the line-height is the font size. The line-height and the vertical-align together vertically center the icon. */
 }
 
 .no-show {
