Position echo notifications badge correctly in Refreshed header
Bug: T163616
Change-Id: I15de28e383ad9e726236089cf859410cd6fb1ce4

--- a/refreshed/extensions/Echo/echo.badge.less
+++ b/refreshed/extensions/Echo/echo.badge.less
@@ -2,8 +2,17 @@
 	display: none;
 }
 
-#pt-notifications {
-	display: inline;
-	float: right;
-	margin: 0.9em 0 0 0;
+.header-dropdown-item {
+	&#pt-notifications-notice,
+ 	&#pt-notifications-alert {
+		float: right;
+		display: inline;
+		margin: 0.9em 0.2em 0 0;
+		a {
+			color: transparent;
+		}
+		&:hover {
+			background: none;
+		}
+	}
 }
