--- a/refreshed/extensions/Echo/echo.ui.less
+++ b/refreshed/extensions/Echo/echo.ui.less
@@ -1,15 +1,18 @@
 #echo {
 	float: right; /* so Echo doesn't push menu items out of the header when the mobile logo is enabled */
-	padding-top: 1em;
+	padding: 0 1em 0 0;
 	line-height: 0;
-}
-
-#echo li {
-	display: inline;
-	margin-left: 0.5em;
-	line-height: 1;
-}
-
-#echo .oo-ui-labelElement-label {
-	font-size: 1.125em;
+	li {
+		line-height: 1;
+		display: inline-block;
+		padding: 0 .75em 0 0;
+		margin: 1em 0 0 0;
+		float: right;
+		&:last-child {
+			margin-right: 0;
+		}
+	}
+	.oo-ui-labelElement-label {
+		font-size: 1.125em;
+	}
 }
