--- a/refreshed/main.css
+++ b/refreshed/main.css
@@ -98,11 +98,11 @@ a.header-button { /* double selectors to override default a element text-decorat
 	transform: rotate(-180deg);
 }
 
-.header-dropdown-item:not(#pt-notifications) a {
+.header-dropdown-item a {
 	color: #fff;
 }
 
-.header-dropdown-item:not(#pt-notifications) a.new {
+.header-dropdown-item a.new {
 	color: #fdad9d;
 }
 
