--- a/refreshed/styles/screen/main.css
+++ b/refreshed/styles/screen/main.css
@@ -307,23 +307,22 @@ a.header-button { /* double selectors to override default a element text-decorat
 }
 
 #content-heading {
-	padding: 0 0.9em; /* 1em (#bodyContent padding-left) * 0.9em (#bodyContent font-size) */
-	padding-bottom: 2.5em; /* 0.25em (padding on top of .standard-toolbox) + 1.5em (height of .standard-toolbox) + 0.75em (padding on bottom of .standard-toolbox) */
+	/* padding-bottom: 1em (#bodyContent padding-left) * 0.9em (#bodyContent font-size);
+	 padding-left: 0.25em (padding on top of .standard-toolbox) + 1.5em (height of .standard-toolbox) + 0.75em (padding on bottom of .standard-toolbox) */
+	padding: 0.5em 0 0.9em 2.5em;
 	position: relative;
 }
 
 #firstHeading {
 	font-size: 2.68em;
 	font-family: "Lato Body", sans-serif;
-	padding-top: 0.2em;
-	padding-bottom: 0;
+	padding: 0;
 	margin-bottom: 0;
 	border: 0;
 }
 
 .mw-indicators {
 	float: right;
-	margin-top: -1.5em;
 }
 
 .mw-indicator {
