--- a/refreshed/styles/screen/main.css
+++ b/refreshed/styles/screen/main.css
@@ -1,4 +1,4 @@
-.collapsible {
+.refreshed-menu-collapsible {
 	-ms-transition: max-height 0.4s ease;
 	transition: max-height 0.4s ease;
 	/*max-height: 50vh; /* capping the sidebar height at half the height of the window */
@@ -7,7 +7,7 @@
 	height: auto;
 }
 
-.collapsed {
+.refreshed-menu-collapsed {
 	-ms-transition: max-height 0.2s ease, visibility 0.2s;
 	transition: max-height 0.2s ease, visibility 0.2s;
 	max-height: 0 !important;
