Rename sidebar icon
Not sure why it was ever called "rightbar" when by default it's on the
left, but it's a nondescriptive filename nonetheless and doesn't make a
difference whether Refreshed is in ltr or rtl mode, so here's a more
descriptive and relevant filename.

Change-Id: Ic2a7da57cf0acaf1f2577b5705e9cb4363c94b9c

--- a/refreshed/styles/screen/main.css
+++ b/refreshed/styles/screen/main.css
@@ -172,7 +172,7 @@ a.header-button { /* double selectors to override default a element text-decorat
 	top: 0;
 	right: -3em;
 	background-color: #194a8d;
-	background-image: url(../../images/icon-rightbar.png);
+	background-image: url(../../images/icon-sidebar-toggle.png);
 	background-size: 3em;
 	display: none;
 	-ms-transition: right 0.2s ease 0s;
